--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,14 @@ dependencies:
 
 
   cupertino_icons: ^1.0.8
+  google_fonts: ^4.0.4
+  auto_route: ^9.0.0  
+  mocktail: ^0.2.0
+  bloc_test: ^8.5.0
+  equatable: ^2.0.5
+  flutter_bloc: ^7.3.3
+  dartz: ^0.10.1 
+  get_it: ^7.2.0
   api: 
     path: frontend-coding-challenge/api
 
@@ -28,6 +36,8 @@ dev_dependencies:
 
 
   flutter_lints: ^5.0.0
+  auto_route_generator: ^9.0.0
+  build_runner: ^2.4.4
 
 
 
