fix: "refactor for api and json placement"

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,7 @@ dependencies:
   flutter_bloc: ^7.3.3
   dartz: ^0.10.1 
   get_it: ^7.2.0
-  api: 
-    path: frontend-coding-challenge/api
+
 
 dev_dependencies:
   flutter_test:
@@ -38,6 +37,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   auto_route_generator: ^9.0.0
   build_runner: ^2.4.4
+  test: ^1.25.4
 
 
 
@@ -46,6 +46,10 @@ flutter:
 
   uses-material-design: true
 
+
+  assets:
+    - assets/json_files/absences.json
+    - assets/json_files/members.json
 
   # fonts:
   #   - family: Schyler
