--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,18 +29,22 @@ dependencies:
   shimmer: ^2.0.0
   intl: ^0.18.1
   flutter_spinkit:
+  share_plus: ^7.0.0
+  path_provider:
+  bloc: ^7.2.1
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  test: ^1.25.4  
 
 
 
   flutter_lints: ^5.0.0
   auto_route_generator: ^9.0.0
   build_runner: ^2.4.4
-  test: ^1.25.4
+  
 
 
 
